[package]
name = "billig"
version = "0.2.0"
authors = ["Vanille-N <neven.villani@gmail.com>"]
edition = "2021"
description = "A command-line DSL budget manager"
repository = "https://github.com/Vanille-N/billig/"
license = "MIT OR Apache-2.0"
keywords = ["budget", "money"]
categories = ["command-line-utilities", "date-and-time", "visualization"]
exclude = ["book", "examples", "aux"]


[dependencies]
pest = "2.1"
pest_derive = "2.1"
num-traits = "0.2"
num-derive = "0.3"
svg = "0.9"
clap = "2.33"
chrono = "0.4"
